--- a/index.html
+++ b/index.html
@@ -7,51 +7,35 @@
     <title>Project 1</title>
   </head>
   <body>
-    <table style="width:27%">
-      <caption>milk products</caption>
-        <thead>
-          <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>price</th>
-            <th>quantity</th>
-            <th colspan="2">in stock</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-           <td>05372</td>
-           <td>lovin' dairy</td>
-           <td>1.45 euro</td>
-           <td>7</td>
-           <td>yes</td>
-           <td>no</td>
-          </tr>
-          <tr>
-           <td>05373</td>
-           <td>soy boy juice</td>
-           <td>1.75 euro</td>
-           <td>5</td>
-           <td>yes</td>
-           <td>no</td>
-          </tr>
-          <tr>
-           <td>05374</td>
-           <td>beetlejuice</td>
-           <td>2.75 euro</td>
-           <td>9</td>
-           <td>yes</td>
-           <td>no</td>
-          </tr>
-          <tr>
-           <td>05375</td>
-           <td>new stuff</td>
-           <td>1.20 euro</td>
-           <td>2</td>
-           <td>yes</td>
-           <td>no</td>
-          </tr>
-        </tbody>
-      </table>
+    <div>
+      <header>
+        H E A D E R
+      </header>
+      <main>
+        <nav>
+          wop wop<br>
+          vop vop <br>
+          nop nop<br>
+          mop mop
+        </nav>
+        <section>
+          <header>
+            smoll header
+          </header>
+          <article>
+            hello, i am a lengthy articool, do not be afraid!<br>
+            i like to take up people's time, so let me keep you busy<br>
+            so please read me and don't stop, bla bla bla</br>
+            getting on your nerves is what i do best, let us go<br>
+            let's be friends, don't be shy, you won't regret it
+          </article>
+          <footer>footing footers</footer>
+        </section>
+        <aside>
+          insert adds here :)
+        </aside>
+      </main>
+      <footer>w o o t !</footer>
+    </div>
   </body>
 </html>
