--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             i like to take up people's time, so let me keep you busy<br>
             so please read me and don't stop, bla bla bla</br>
             getting on your nerves is what i do best, let us go<br>
-            let's be friends, don't be shy, you won't regret it
+            let's be friends, don't be shy, you won't regret it<br>
+            also, i like html and css
           </article>
           <footer>footing footers</footer>
         </section>
