--- a/index.html
+++ b/index.html
@@ -7,36 +7,74 @@
     <title>Project 1</title>
   </head>
   <body>
-    <div>
+    <main>
       <header>
-        H E A D E R
-      </header>
-      <main>
         <nav>
-          wop wop<br>
-          vop vop <br>
-          nop nop<br>
-          mop mop
+          <h1>Front-end</h1>
+          <a href="Apie mus">Apie mus</a>
+          <a href="Paslaugos">Paslaugos</a>
+          <a href="Tvarkarastis">Tvarkarastis</a>
+          <a href="Kontaktai">Kontaktai</a>
         </nav>
-        <section>
-          <header>
-            smoll header
-          </header>
-          <article>
-            hello, i am a lengthy articool, do not be afraid!<br>
-            i like to take up people's time, so let me keep you busy<br>
-            so please read me and don't stop, bla bla bla</br>
-            getting on your nerves is what i do best, let us go<br>
-            let's be friends, don't be shy, you won't regret it<br>
-            also, i like html and css
-          </article>
-          <footer>footing footers</footer>
-        </section>
-        <aside>
-          insert adds here :)
-        </aside>
-      </main>
-      <footer>w o o t !</footer>
-    </div>
+      </header>
+      <section>
+        <h2>Apie mus</h2>
+        <img src="https://3.bp.blogspot.com/-fFvxEKE-qSw/XNseoHMIalI/AAAAAAABS5c/qbMhCehmDakPGGWi8JuqegwPmilr5VOZQCLcBGAs/s200/4156.jpg" alt="">
+        <article>
+         <p>hero walked the poro home and they both became best of friends. keep this in mind, ok? insert some beautiful text about a cute little poro that got lost on an adventure and came across a hero that helped him find his way to the porosnax. after the whole quest, the hero walked the poro home and they both became best of friends. keep this in mind, ok?insert some beautiful text about a cute little poro that got lost on an adventure and came across a hero that helped him find his way to the porosnax. after the whole quest, the hero walked the poro home and they both became best of.. insert some beautiful text about a cute little poro that got lost on an adventure and came across a hero that helped him find his way to the porosnax. after the whole quest, the hero walked the poro home and they both became best of friends. keep this in mind, ok? after the whole quest, the hero walked the poro home and they both became best of.. insert some beautiful text about a cute little poro that got lost on an adventure and came across a hero that helped him find his way to the porosnax. after the whole quest, the hero walked the poro home and they both became best of friends. keep this in mind, ok? after the whole quest, the hero walked the poro home and they both became best of.. insert some beautiful text about a cute little poro that got lost on an adventure and came across a hero that helped him find his way to the porosnax. after the whole quest, the hero walked the poro home and they both became best of friends. keep this in mind, ok?</p>
+         <a href="pasirinklaika">Pasirink laika!</a>
+        </article>
+      </section>
+      <div class="paslaugos">
+        <h2>Paslaugos</h2>
+        <ul>
+          <li class="paslaugos"><a href="#">PHP</a></li>
+          <li class="paslaugos"><a href="#">Java</a></li>
+          <li class="paslaugos"><a href="#">HTML</a></li>
+          <li class="paslaugos"><a href="#">CSS</a></li>
+          <li class="paslaugos"><a href="#">Python</a></li>
+        </ul>
+        <ul>
+          <li class="paslaugos"><a href="#">Porosnax</a></li>
+          <li class="paslaugos"><a href="#">Font-end</a></li>
+          <li class="paslaugos"><a href="#">Back-end</a></li>
+          <li class="paslaugos"><a href="#">Iceborne</a></li>
+          <li class="paslaugos"><a href="#">oof</a></li>
+        </ul>
+      </div>
+      <div>
+        <h2>Tvarkarastis</h2>
+        <table style="width:95%">
+          <tr>
+            <th colspan="3">Laikai</th>
+          </tr>
+          <tr>
+            <td>Rugsejo 5 2019</td>
+            <td>15:30</td>
+            <td><a href="#">Uzsiregistruoti</a></td>
+          </tr>
+          <tr>
+            <td>Lapkricio 10 2019</td>
+            <td>16:30</td>
+            <td><a href="#">Uzsiregistruoti</a></td>
+          </tr>
+          <tr>
+            <td>Gruodzio 15 2019</td>
+            <td>15:30</td>
+            <td><a href="#">Uzsiregistruoti</a></td>
+          </tr>
+          <tr>
+            <td>Balandzio 20 2019</td>
+            <td>16:30</td>
+            <td><a href="#">Uzsiregistruoti</a></td>
+          </tr>
+        </table>
+      </div>
+      <div class="kontaktai">
+        <h2>Kontaktai</h2>
+        <img src="https://image.cnbcfm.com/api/v1/image/106278717-1575487551656screenshot2019-12-04at2.25.16pm.png?v=1575487585&w=678&h=381" alt="">
+      </div>
+      <footer>COPYRIGHT © 2019 2020</footer>
+    </main>
   </body>
 </html>
