--- a/index.html
+++ b/index.html
@@ -2,37 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Scientists</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="C:\Users\Raven\Desktop\html css\style.css">
+    <title></title>
   </head>
   <body>
-    <main>
-      <header>
-        <div class="wrapper">
-          <nav>
-            <img src="https://vectorified.com/images/poro-icon-6.jpg" alt="">
-            <ul>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-      <section>
-        <div class="wrapper">
-          <h1>Art House & Gallery</h1>
-        </div>
-      </section>
-      <article class="art">
-        <div class="wrapper">
-          <h2>Misunderstood art</h2>
-          <p>big para</p>
-          <img src="" alt="">
-          <p>smoll para</p>
-        </div>
-      </article>
-    </main>
+    
   </body>
 </html>
