--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\Raven\Desktop\html css\style.css">
-    <title></title>
-  </head>
-  <body>
-    
-  </body>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>bad art</title>
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<main>
+		<header>
+      <div class="wrapper">
+        <img src="http://opgg-static.akamaized.net/images/profile_icons/profileIcon3237.jpg" alt="logo">
+  			<nav>
+  				<a href="#">portfolio</a>
+  				<a href="#">about</a>
+  				<a href="#">contact</a>
+  			</nav>
+      </div>
+		</header>
+    <section id="title">
+      <div class="wrapper">
+        <h1>art house & gallery</h1>
+      </div>
+    </section>
+    <section id="article">
+      <div class="wrapper">
+        <article>
+          <h2>misunderstood art</h2>
+          <p><img src="https://66.media.tumblr.com/e5ebbb123dc9425b2fb6dd2f7cf5efec/tumblr_pphkmzqgSl1vo6vclo1_250.jpg" alt="article-icon">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vel maximus sem, vitae finibus neque. Cras efficitur leo ultrices justo hendrerit blandit. Vivamus feugiat eros consequat tellus convallis bibendum. Ut non lobortis odio. Phasellus vitae consequat lorem, vitae efficitur neque. Nam facilisis ligula at augue ullamcorper, ullamcorper scelerisque urna euismod. Vestibulum egestas luctus ipsum, at sagittis mauris eleifend convallis. Ut quam libero, pharetra dignissim
+              lacinia eget, sodales eu sapien. Nunc pharetra eleifend volutpat. Nulla ut hendrerit lacus, et placerat leo. Proin ac arcu mattis, egestas neque quis, pulvinar tortor.</p>
+          <p>Suspendisse enim est, mollis quis ullamcorper at, dapibus at enim. Fusce tempor risus nec ligula sodales, nec ornare purus sodales. Aenean sodales aliquam tortor, nec pretium sapien feugiat eu. Etiam sagittis ornare ipsum, non maximus magna. Pellentesque fermentum nulla a tellus lacinia posuere. Etiam sed dignissim nisi. Maecenas quam sem, convallis sit amet commodo non, eleifend vel mi.</p>
+        </article>
+      </div>
+    </section>
+		<section id="badart">
+      <div class="wrapper">
+        <h2>bad art</h2>
+        <div class="flex-container">
+          <ul>
+            <li><a href="#">history</a></li>
+            <li><a href="#">theory</a></li>
+            <li><a href="#">forms</a></li>
+            <li><a href="#">purpose</a></li>
+            <li><a href="#">classification</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">further reading</a></li>
+            <li><a href="#">notes</a></li>
+            <li><a href="#">bibliography</a></li>
+          </ul>
+        </div>
+      </div>
+		</section>
+		<section id="stockart">
+			<div class="wrapper">
+        <h2>stock art</h2>
+        <div class="stock-images">
+          <img src="https://4.bp.blogspot.com/-S39ylB65rMQ/XNseoqm3ZiI/AAAAAAABS5g/M9FczGDscjox8k89yXgbmL-mf8qgLw1KACLcBGAs/s200/4157.jpg" alt="/">
+          <img src="https://i.pinimg.com/originals/dc/fe/ca/dcfeca7bcb60958e8f122b07e9f49572.png" alt="/">
+          <img src="https://pbs.twimg.com/media/DdayAz7VQAAhGS9.jpg" alt="/">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCyMMHuK5PT0AhDmXFwCL6b3oSiyEB73AJrJYQMArl9ONEQsiO&s" alt="/">
+          <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/0/0e/Reindeer_Poro_profileicon.png/revision/latest?cb=20171122221052" alt="/">
+          <img src="https://3.bp.blogspot.com/-fFvxEKE-qSw/XNseoHMIalI/AAAAAAABS5c/qbMhCehmDakPGGWi8JuqegwPmilr5VOZQCLcBGAs/s200/4156.jpg" alt="/">
+        </div>
+      </div>
+		</section>
+		<footer>
+			<div class="wrapper">
+        Copyright &copy; 2020
+      </div>
+		</footer>
+	</main>
+</body>
 </html>
